global-kong-gateway/1-kong-global-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: global-kong-api-gateway
  namespace: kong
spec:
  gatewayClassName: kong-global
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
