global-kong-gateway/2-global-domain-httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: retail-banking-global-httproute
  namespace: kong
spec:
  parentRefs:
    - name: global-kong-api-gateway
      namespace: kong
  hostnames:
    - "retail-banking.hellocloudbank.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: kong-retail-gateway-proxy
          namespace: retail-banking
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: payments-global-httproute
  namespace: kong
spec:
  parentRefs:
    - name: global-kong-api-gateway
      namespace: kong
  hostnames:
    - "payments.hellocloudbank.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: kong-payments-gateway-proxy
          namespace: payments
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grc-global-httproute
  namespace: kong
spec:
  parentRefs:
    - name: global-kong-api-gateway
      namespace: kong
  hostnames:
    - "grc.hellocloudbank.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: kong-grc-gateway-proxy
          namespace: grc
          port: 80
